fix: tagpicker no longer causes page jumps

--- a/overview/style/output.css
+++ b/overview/style/output.css
@@ -1327,6 +1327,10 @@ input:checked + .toggle-bg {
   margin-top: 0.5rem;
 }
 
+.mt-\[150vh\] {
+  margin-top: 150vh;
+}
+
 .mt-px {
   margin-top: 1px;
 }
